--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,10 @@
-<h1>
-  {{title}}
-</h1>
+<app-navbar></app-navbar>
+<div class="container-fluid">
+  <div class="row">
+    <app-sidebar></app-sidebar>
+    <div class="col-sm-7 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+      <!-- <router-outlet></router-outlet> -->
+    </div>
+    <app-footer></app-footer>
+  </div>
+</div>
