--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,67 @@
-<p>
-  footer works!
-</p>
+<div style="background-color: #2F2F2F; color:#fff;padding-top:15px;padding-bottom:15px;">
+    <div class="container-fluid">
+
+        <div class="col-md-12">
+
+            <div class="col-md-1" style="text-align: center;padding:0px;">
+                <img src="http://dinus.ac.id/img/logo udinus official round.png" width="100%" style="padding-top:10px;max-width: 90px;max-height: 100px;">
+            </div>
+            <div class="col-md-5" style="padding-left: 10px;">
+                <h4 style="padding-top: 5px;margin-bottom: 0px;">Universitas Dian Nuswantoro</h4>
+                <p style="font-size:0.85em;margin-top: 0px;">
+                    Main Campus : 207 Imam Bonjol Street || <i class="fa fa-phone" style="color: #FFCC00"></i> (+6224) 3517261<br>
+                    Other Campus : 5-11 Nakula I Street || <i class="fa fa-phone" style="color: #FFCC00"></i> (+6224) 3520165<br>
+                    <i class="fa fa-fax" style="color: #FFCC00"></i> Fax. (+6224) 3569684 || Semarang 50131 Indonesia<br>
+                    <i class="fa fa-envelope" style="color: #FFCC00"></i><a href="http://m.dinus.ac.id/hospitality" style="color: #fff;">  Contact us</a>
+
+                </p>
+            </div>
+
+            <div class="col-md-3" style="text-align: center;">
+                <h4 style="color: #fff;">Contact Us</h4>
+
+
+                <ul class="social-network social-circle">
+                    <!--                      <li><a href="#" class="icoRss" title="Rss"><i class="fa fa-rss"></i></a></li>-->
+                    <li><a target="_blank" href="https://www.facebook.com/udinus.smg" class="icoFacebook" title="Facebook"><i class="fa fa-facebook sc"></i></a></li>
+                    <li><a target="_blank" href="https://twitter.com/udinus_smg" class="icoTwitter" title="Twitter"><i class="fa fa-twitter sc"></i></a></li>
+                    <li><a target="_blank" href="https://plus.google.com/101582294656647784536" class="icoGoogle" title="Google +"><i class="fa fa-google-plus sc"></i></a></li>
+                    <li><a target="_blank" href="https://www.instagram.com/udinus_smg/" class="icoInstagram" title="Instagram"><i class="fa fa-instagram sc"></i></a></li>
+                    <!--                      <li><a href="#" class="icoLinkedin" title="Linkedin"><i class="fa fa-linkedin sc"></i></a></li>-->
+
+                </ul>
+            <div>
+                <a href="http://m.dinus.ac.id"  title="Ganti ke versi desktop/mobile">Switch to mobile version</a>
+
+            </div>
+            </div>
+            <div class="col-md-1" style="text-align: center;padding-top: 45px;">
+                <!-- Histats.com  START  (standard)-->
+                <script type="text/javascript">document.write(unescape("%3Cscript src=%27http://s10.histats.com/js15.js%27 type=%27text/javascript%27%3E%3C/script%3E"));</script>
+                <a href="http://www.histats.com" target="_blank" title="free web stats" ><script  type="text/javascript" >
+                    try {Histats.start(1,3257677,4,322,112,62,"00011111");
+                        Histats.track_hits();} catch(err){};
+                </script></a>
+                <noscript><a href="http://www.histats.com" target="_blank"><img  src="http://sstatic1.histats.com/0.gif?3257677&101" alt="free web stats" border="0"></a></noscript>
+                <!-- Histats.com  END  -->
+            </div>
+
+
+
+        </div>
+
+
+
+    </div>
+    <br>
+
+</div>
+<!-- PENUTUP FOOTER -->
+
+<div style="border-bottom: 3px solid #FF4500;">
+    <div class="container" style="color: #333;">
+        <!-- <center><h6>UNIVERSITAS DIAN NUSWANTORO SEMARANG ||
+            Copyright © 2015 - 2020 PSI UDINUS All right Reserved (App-33)
+        </h6></center> -->
+    </div>
+</div>
