--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,8 @@
     <div class="col-sm-7 col-sm-offset-3 col-md-10 col-md-offset-2 main">
       <!-- <router-outlet></router-outlet> -->
     </div>
+  </div>
+  <div class="row">
     <app-footer></app-footer>
   </div>
 </div>
