--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,20 +1,23 @@
 <div class="col-sm-3 col-md-2 sidebar">
   <ul class="nav nav-sidebar">
-    <li class="active"><a href="#">Overview <span class="sr-only">(current)</span></a></li>
-    <li><a href="#">Reports</a></li>
-    <li><a href="#">Analytics</a></li>
-    <li><a href="#">Export</a></li>
-  </ul>
-  <ul class="nav nav-sidebar">
-    <li><a href="">Nav item</a></li>
-    <li><a href="">Nav item again</a></li>
-    <li><a href="">One more nav</a></li>
-    <li><a href="">Another nav item</a></li>
-    <li><a href="">More navigation</a></li>
-  </ul>
-  <ul class="nav nav-sidebar">
-    <li><a href="">Nav item again</a></li>
-    <li><a href="">One more nav</a></li>
-    <li><a href="">Another nav item</a></li>
+    <li class="active"><a href="#">Home <span class="sr-only">(current)</span></a></li>
+    <li><a href="#">Akademik</a></li>
+    <li><a href="#">Alumni</a></li>
+    <li><a href="#">Career Center</a></li>
+    <li><a href="#">Hospotality</a></li>
+    <li><a href="#">Kemahasiswaan</a></li>
+    <li><a href="#">Kepegawaian</a></li>
+    <li><a href="#">Keuangan</a></li>
+    <li><a href="#">Laboratorium</a></li>
+    <li><a href="#">Layanan Poliklinik</a></li>
+    <li><a href="#">Parkir</a></li>
+    <li><a href="#">Penelitian dan Pengabdian</a></li>
+    <li><a href="#">Pengumuman Akademik</a></li>
+    <li><a href="#">Percetakan</a></li>
+    <li><a href="#">Perpustakaan</a></li>
+    <li><a href="#">Semester Pendek</a></li>
+    <li><a href="#">Semester Reguler</a></li>
+    <li><a href="#">SiAdin</a></li>
+    <li><a href="#">Wisuda</a></li>
   </ul>
 </div>
