--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,10 +1,10 @@
 <!-- Header -->
-<div class="container-fluid header">
+<div class="container-fluid header navj">
   <div class="col-md-2">
 
   </div>
   <!-- Logo Udinus -->
-  <div class="col-md-6 center" style="margin-bottom:15px;">
+  <div class="col-md-6 center">
     <div id="logo">
       <a class="" href="http://dinus.ac.id/" ><img src="http://dinus.ac.id/img/logo dinus university.png" style="max-width:400px;padding: 0px;"></a>
     </div>
