--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -56,12 +56,12 @@
     <br>
 
 </div>
-<!-- PENUTUP FOOTER -->
 
+<!-- PENUTUP FOOTER -->
 <div style="border-bottom: 3px solid #FF4500;">
     <div class="container" style="color: #333;">
-        <!-- <center><h6>UNIVERSITAS DIAN NUSWANTORO SEMARANG ||
+        <h6>UNIVERSITAS DIAN NUSWANTORO SEMARANG ||
             Copyright © 2015 - 2020 PSI UDINUS All right Reserved (App-33)
-        </h6></center> -->
+        </h6>
     </div>
 </div>
