--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,23 +1,178 @@
 <div class="col-sm-3 col-md-2 sidebar">
   <ul class="nav nav-sidebar">
     <li class="active"><a href="#">Home <span class="sr-only">(current)</span></a></li>
-    <li><a href="#">Akademik</a></li>
-    <li><a href="#">Alumni</a></li>
-    <li><a href="#">Career Center</a></li>
-    <li><a href="#">Hospotality</a></li>
-    <li><a href="#">Kemahasiswaan</a></li>
-    <li><a href="#">Kepegawaian</a></li>
-    <li><a href="#">Keuangan</a></li>
-    <li><a href="#">Laboratorium</a></li>
-    <li><a href="#">Layanan Poliklinik</a></li>
-    <li><a href="#">Parkir</a></li>
-    <li><a href="#">Penelitian dan Pengabdian</a></li>
-    <li><a href="#">Pengumuman Akademik</a></li>
-    <li><a href="#">Percetakan</a></li>
-    <li><a href="#">Perpustakaan</a></li>
-    <li><a href="#">Semester Pendek</a></li>
-    <li><a href="#">Semester Reguler</a></li>
-    <li><a href="#">SiAdin</a></li>
-    <li><a href="#">Wisuda</a></li>
+
+    <li><a data-toggle="collapse" href="#akademik">Akademik</a></li>
+    <div id="akademik" class="panel-collapse collapse out">
+      <ul>
+        <li><a>Aktifasi</a></li>
+        <li><a>Heregritasi</a></li>
+        <li><a>Ijazah</a></li>
+        <li><a>Informasi Kelas Kosong</a></li>
+        <li><a>KRS</a></li>
+        <li><a>KTM</a></li>
+        <li><a>Permohonan Cuti</a></li>
+        <li><a>Registrasi</a></li>
+        <li><a>Transkrip</a></li>
+        <li><a>Wisuda</a></li>
+      </ul>
+    </div>
+
+    <li><a data-toggle="collapse" href="#alumni">Alumni</a></li>
+    <div id="alumni" class="panel-collapse collapse out">
+      <ul>
+        <li><a>Tracing Alumni</a></li>
+      </ul>
+    </div>
+
+    <li><a data-toggle="collapse" href="#career-center">Career Center</a></li>
+    <div id="career-center" class="panel-collapse collapse out">
+      <ul>
+        <li><a>Info Lowongan</a></li>
+      </ul>
+    </div>
+
+    <li><a data-toggle="collapse" href="#hospitality">Hospotality</a></li>
+    <div id="hospitality" class="panel-collapse collapse out">
+      <ul>
+        <li><a>Call Center</a></li>
+        <li><a>Online Yahoo</a></li>
+        <li><a>SMS Center</a></li>
+      </ul>
+    </div>
+
+    <li><a data-toggle="collapse" href="#kemahasiswaan">Kemahasiswaan</a></li>
+    <div id="kemahasiswaan" class="panel-collapse collapse out">
+      <ul>
+        <li><a>Beasiswa</a></li>
+        <li><a>Komunitas</a></li>
+        <li><a>Mawapres</a></li>
+        <li><a>Organisasi/Himpunan Mahasiswa</a></li>
+        <li><a>Penelitian/Karya Ilmiah</a></li>
+        <li><a>Unit Kegiatan Mahasiswa</a></li>
+      </ul>
+    </div>
+
+    <li><a data-toggle="collapse" href="#kepegawaian">Kepegawaian</a></li>
+    <div id="kepegawaian" class="panel-collapse collapse out">
+      <ul>
+        <li><a>Beban Kinerja Dosen</a></li>
+        <li><a>Informasi Dosen</a></li>
+        <li><a>Informasi Pegawai</a></li>
+        <li><a>Serdos</a></li>
+      </ul>
+    </div>
+
+    <li><a data-toggle="collapse" href="#keuangan">Keuangan</a></li>
+    <div id="keuangan" class="panel-collapse collapse out">
+      <ul>
+        <li><a>Rekening Pembayaran</a></li>
+        <li><a>Status Pembayaran</a></li>
+        <li><a>Tagihan</a></li>
+      </ul>
+    </div>
+
+    <li><a data-toggle="collapse" href="#laboratorium">Laboratorium</a></li>
+    <div id="laboratorium" class="panel-collapse collapse out">
+      <ul>
+        <li><a>Jenis dan Kategori</a></li>
+        <li><a>Letak Laboratorium</a></li>
+      </ul>
+    </div>
+
+    <li><a data-toggle="collapse" href="#layanan-poliklinik">Layanan Poliklinik</a></li>
+    <div id="layanan-poliklinik" class="panel-collapse collapse out">
+      <ul>
+        <li><a>Layanan Poliklinik</a></li>
+      </ul>
+    </div>
+
+    <li><a data-toggle="collapse" href="#parkir">Parkir</a></li>
+    <div id="parkir" class="panel-collapse collapse out">
+      <ul>
+        <li><a>Kehilangan</a></li>
+        <li><a>Keluar Masuk</a></li>
+        <li><a>Tempat Parkir</a></li>
+      </ul>
+    </div>
+
+    <li><a data-toggle="collapse" href="#penelitian-dan-pengabdian">Penelitian dan Pengabdian</a></li>
+    <div id="penelitian-dan-pengabdian" class="panel-collapse collapse out">
+      <ul>
+        <li><a>Penelitian</a></li>
+        <li><a>Pengabdian</a></li>
+        <li><a>RIP (Rencana Induk Penelitian)</a></li>
+      </ul>
+    </div>
+
+    <li><a data-toggle="collapse" href="#pengumuman-akademik">Pengumuman Akademik</a></li>
+    <div id="pengumuman-akademik" class="panel-collapse collapse out">
+      <ul>
+        <li><a>Berita</a></li>
+        <li><a>Internal</a></li>
+      </ul>
+    </div>
+
+    <li><a data-toggle="collapse" href="#percetakan">Percetakan</a></li>
+    <div id="percetakan" class="panel-collapse collapse out">
+      <ul>
+        <li><a>Lokasi Percetakan</a></li>
+        <li><a>Modul Kuliah</a></li>
+      </ul>
+    </div>
+
+    <li><a data-toggle="collapse" href="#perpustakaan">Perpustakaan</a></li>
+    <div id="perpustakaan" class="panel-collapse collapse out">
+      <ul>
+        <li><a>Buku Text</a></li>
+        <li><a>e-Book</a></li>
+        <li><a>Jurnal</a></li>
+        <li><a>Letak Perpustakaan</a></li>
+        <li><a>Prosedur Pengembalian</a></li>
+        <li><a>Prosedur Pinjam</a></li>
+        <li><a>Skripsi/Tugas Akhir</a></li>
+      </ul>
+    </div>
+
+    <li><a data-toggle="collapse" href="#semester-pendek">Semester Pendek</a></li>
+    <div id="semester-pendek" class="panel-collapse collapse out">
+      <ul>
+        <li><a>Absensi</a></li>
+        <li><a>Pendaftaran SP</a></li>
+        <li><a>Proses KRS</a></li>
+        <li><a>Ujian Akhir Semester</a></li>
+        <li><a>Ujian Tengah Semester</a></li>
+      </ul>
+    </div>
+
+    <li><a data-toggle="collapse" href="#semester-reguler">Semester Reguler</a></li>
+    <div id="semester-reguler" class="panel-collapse collapse out">
+      <ul>
+        <li><a>Absensi</a></li>
+        <li><a>Pendaftaran Semester Pendek</a></li>
+        <li><a>Proses KRS</a></li>
+        <li><a>Ujian Tengah dan Akhir Semester</a></li>
+      </ul>
+    </div>
+
+    <li><a data-toggle="collapse" href="#siadin">SiAdin</a></li>
+    <div id="siadin" class="panel-collapse collapse out">
+      <ul>
+        <li><a>E-mail</a></li>
+        <li><a>Jenis & Kategori</a></li>
+        <li><a>Layanan</a></li>
+        <li><a>Login</a></li>
+      </ul>
+    </div>
+
+    <li><a data-toggle="collapse" href="#wisuda">Wisuda</a></li>
+    <div id="wisuda" class="panel-collapse collapse out">
+      <ul>
+        <li><a>Hal-hal penting</a></li>
+        <li><a>Mekanisme Wisuda</a></li>
+        <li><a>Syarat Pendaftaran Wisuda</a></li>
+        <li><a>Tanggal Pelaksanaan</a></li>
+      </ul>
+    </div>
   </ul>
 </div>
