routing module akademik

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,8 @@
 <div class="container-fluid">
   <div class="row">
     <app-sidebar></app-sidebar>
-    <div class="col-sm-7 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-      <!-- <router-outlet></router-outlet> -->
+    <div class="col-sm-5 col-md-10 main">
+      <router-outlet></router-outlet>
     </div>
   </div>
   <div class="row">
