--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -5,16 +5,16 @@
     <li><a data-toggle="collapse" href="#akademik">Akademik</a></li>
     <div id="akademik" class="panel-collapse collapse out">
       <ul>
-        <li><a>Aktifasi</a></li>
-        <li><a>Heregritasi</a></li>
-        <li><a>Ijazah</a></li>
-        <li><a>Informasi Kelas Kosong</a></li>
-        <li><a>KRS</a></li>
-        <li><a>KTM</a></li>
-        <li><a>Permohonan Cuti</a></li>
-        <li><a>Registrasi</a></li>
-        <li><a>Transkrip</a></li>
-        <li><a>Wisuda</a></li>
+        <li><a routerLink="/akademik/aktifasi">Aktifasi</a></li>
+        <li><a routerLink="/akademik/heregristrasi">Heregritasi</a></li>
+        <li><a routerLink="/akademik/ijazah">Ijazah</a></li>
+        <li><a routerLink="/akademik/informasi-kelas-kosong">Informasi Kelas Kosong</a></li>
+        <li><a routerLink="/akademik/krs">KRS</a></li>
+        <li><a routerLink="/akademik/ktm">KTM</a></li>
+        <li><a routerLink="/akademik/permohonan-cuti">Permohonan Cuti</a></li>
+        <li><a routerLink="/akademik/regristrasi">Registrasi</a></li>
+        <li><a routerLink="/akademik/transkrip">Transkrip</a></li>
+        <li><a routerLink="/akademik/wisuda">Wisuda</a></li>
       </ul>
     </div>
 
