--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -21,157 +21,157 @@
     <li><a data-toggle="collapse" href="#alumni">Alumni</a></li>
     <div id="alumni" class="panel-collapse collapse out">
       <ul>
-        <li><a>Tracing Alumni</a></li>
+        <li><a routerLink="/alumni/tracing-alumni">Tracing Alumni</a></li>
       </ul>
     </div>
 
     <li><a data-toggle="collapse" href="#career-center">Career Center</a></li>
     <div id="career-center" class="panel-collapse collapse out">
       <ul>
-        <li><a>Info Lowongan</a></li>
+        <li><a routerLink="/career-center/info-lowongan" >Info Lowongan</a></li>
       </ul>
     </div>
 
     <li><a data-toggle="collapse" href="#hospitality">Hospotality</a></li>
     <div id="hospitality" class="panel-collapse collapse out">
       <ul>
-        <li><a>Call Center</a></li>
-        <li><a>Online Yahoo</a></li>
-        <li><a>SMS Center</a></li>
+        <li><a routerLink="/hospitality/call-center">Call Center</a></li>
+        <li><a routerLink="/hospitality/online-yahoo">Online Yahoo</a></li>
+        <li><a routerLink="/hospitality/sms-center">SMS Center</a></li>
       </ul>
     </div>
 
     <li><a data-toggle="collapse" href="#kemahasiswaan">Kemahasiswaan</a></li>
     <div id="kemahasiswaan" class="panel-collapse collapse out">
       <ul>
-        <li><a>Beasiswa</a></li>
-        <li><a>Komunitas</a></li>
-        <li><a>Mawapres</a></li>
-        <li><a>Organisasi/Himpunan Mahasiswa</a></li>
-        <li><a>Penelitian/Karya Ilmiah</a></li>
-        <li><a>Unit Kegiatan Mahasiswa</a></li>
+        <li><a routerLink="/kemahasiswaan/beasiswa">Beasiswa</a></li>
+        <li><a routerLink="/kemahasiswaan/komunitas">Komunitas</a></li>
+        <li><a routerLink="/kemahasiswaan/mawapres">Mawapres</a></li>
+        <li><a routerLink="/kemahasiswaan/organisasi-atau-himpunan-mahasiswa">Organisasi/Himpunan Mahasiswa</a></li>
+        <li><a routerLink="/kemahasiswaan/penelitian-atau-karya-ilmiah">Penelitian/Karya Ilmiah</a></li>
+        <li><a routerLink="/kemahasiswaan/unit-kegiatan-mahasiswa">Unit Kegiatan Mahasiswa</a></li>
       </ul>
     </div>
 
     <li><a data-toggle="collapse" href="#kepegawaian">Kepegawaian</a></li>
     <div id="kepegawaian" class="panel-collapse collapse out">
       <ul>
-        <li><a>Beban Kinerja Dosen</a></li>
-        <li><a>Informasi Dosen</a></li>
-        <li><a>Informasi Pegawai</a></li>
-        <li><a>Serdos</a></li>
+        <li><a routerLink="/kepegawaian/beban-kinerja-dosen">Beban Kinerja Dosen</a></li>
+        <li><a routerLink="/kepegawaian/informasi-dosen">Informasi Dosen</a></li>
+        <li><a routerLink="/kepegawaian/informasi-pegawai">Informasi Pegawai</a></li>
+        <li><a routerLink="/kepegawaian/serdos">Serdos</a></li>
       </ul>
     </div>
 
     <li><a data-toggle="collapse" href="#keuangan">Keuangan</a></li>
     <div id="keuangan" class="panel-collapse collapse out">
       <ul>
-        <li><a>Rekening Pembayaran</a></li>
-        <li><a>Status Pembayaran</a></li>
-        <li><a>Tagihan</a></li>
+        <li><a routerLink="/keuangan/rekening-pembayaran">Rekening Pembayaran</a></li>
+        <li><a routerLink="/keuangan/status-pembayaran">Status Pembayaran</a></li>
+        <li><a routerLink="/keuangan/tagihan">Tagihan</a></li>
       </ul>
     </div>
 
     <li><a data-toggle="collapse" href="#laboratorium">Laboratorium</a></li>
     <div id="laboratorium" class="panel-collapse collapse out">
       <ul>
-        <li><a>Jenis dan Kategori</a></li>
-        <li><a>Letak Laboratorium</a></li>
+        <li><a routerLink="/laboratorium/jenis-dan-kategori">Jenis dan Kategori</a></li>
+        <li><a routerLink="/laboratorium/letak-laboratorium">Letak Laboratorium</a></li>
       </ul>
     </div>
 
     <li><a data-toggle="collapse" href="#layanan-poliklinik">Layanan Poliklinik</a></li>
     <div id="layanan-poliklinik" class="panel-collapse collapse out">
       <ul>
-        <li><a>Layanan Poliklinik</a></li>
+        <li><a routerLink="/layanan-poliklinik/layanan-poliklinik">Layanan Poliklinik</a></li>
       </ul>
     </div>
 
     <li><a data-toggle="collapse" href="#parkir">Parkir</a></li>
     <div id="parkir" class="panel-collapse collapse out">
       <ul>
-        <li><a>Kehilangan</a></li>
-        <li><a>Keluar Masuk</a></li>
-        <li><a>Tempat Parkir</a></li>
+        <li><a routerLink="parkir/kehilangan">Kehilangan</a></li>
+        <li><a routerLink="parkir/keluar-masuk">Keluar Masuk</a></li>
+        <li><a routerLink="parkir/tempat-parkir">Tempat Parkir</a></li>
       </ul>
     </div>
 
     <li><a data-toggle="collapse" href="#penelitian-dan-pengabdian">Penelitian dan Pengabdian</a></li>
     <div id="penelitian-dan-pengabdian" class="panel-collapse collapse out">
       <ul>
-        <li><a>Penelitian</a></li>
-        <li><a>Pengabdian</a></li>
-        <li><a>RIP (Rencana Induk Penelitian)</a></li>
+        <li><a routerLink="penelitian-dan-pengabdian/penelitian">Penelitian</a></li>
+        <li><a routerLink="penelitian-dan-pengabdian/pengabdian">Pengabdian</a></li>
+        <li><a routerLink="penelitian-dan-pengabdian/rencana-induk-penelitian">RIP (Rencana Induk Penelitian)</a></li>
       </ul>
     </div>
 
     <li><a data-toggle="collapse" href="#pengumuman-akademik">Pengumuman Akademik</a></li>
     <div id="pengumuman-akademik" class="panel-collapse collapse out">
       <ul>
-        <li><a>Berita</a></li>
-        <li><a>Internal</a></li>
+        <li><a routerLink="pengumuman-akademik/berita">Berita</a></li>
+        <li><a routerLink="pengumuman-akademik/internal">Internal</a></li>
       </ul>
     </div>
 
     <li><a data-toggle="collapse" href="#percetakan">Percetakan</a></li>
     <div id="percetakan" class="panel-collapse collapse out">
       <ul>
-        <li><a>Lokasi Percetakan</a></li>
-        <li><a>Modul Kuliah</a></li>
+        <li><a routerLink="percetakan/lokasi-percetakan">Lokasi Percetakan</a></li>
+        <li><a routerLink="percetakan/modul-kuliah">Modul Kuliah</a></li>
       </ul>
     </div>
 
     <li><a data-toggle="collapse" href="#perpustakaan">Perpustakaan</a></li>
     <div id="perpustakaan" class="panel-collapse collapse out">
       <ul>
-        <li><a>Buku Text</a></li>
-        <li><a>e-Book</a></li>
-        <li><a>Jurnal</a></li>
-        <li><a>Letak Perpustakaan</a></li>
-        <li><a>Prosedur Pengembalian</a></li>
-        <li><a>Prosedur Pinjam</a></li>
-        <li><a>Skripsi/Tugas Akhir</a></li>
+        <li><a routerLink="perpustakaan/buku-text">Buku Text</a></li>
+        <li><a routerLink="perpustakaan/e-book">e-Book</a></li>
+        <li><a routerLink="perpustakaan/jurnal">Jurnal</a></li>
+        <li><a routerLink="perpustakaan/letak-perpustakaan">Letak Perpustakaan</a></li>
+        <li><a routerLink="perpustakaan/prosedur-pengembalian">Prosedur Pengembalian</a></li>
+        <li><a routerLink="perpustakaan/prosedur-pinjam">Prosedur Pinjam</a></li>
+        <li><a routerLink="perpustakaan/skripsi-atau-tugas-akhir">Skripsi/Tugas Akhir</a></li>
       </ul>
     </div>
 
     <li><a data-toggle="collapse" href="#semester-pendek">Semester Pendek</a></li>
     <div id="semester-pendek" class="panel-collapse collapse out">
       <ul>
-        <li><a>Absensi</a></li>
-        <li><a>Pendaftaran SP</a></li>
-        <li><a>Proses KRS</a></li>
-        <li><a>Ujian Akhir Semester</a></li>
-        <li><a>Ujian Tengah Semester</a></li>
+        <li><a routerLink="semester-pendek/absensi">Absensi</a></li>
+        <li><a routerLink="semester-pendek/pendaftaran-sp">Pendaftaran SP</a></li>
+        <li><a routerLink="semester-pendek/proses-krs">Proses KRS</a></li>
+        <li><a routerLink="semester-pendek/ujian-akhir-semester">Ujian Akhir Semester</a></li>
+        <li><a routerLink="semester-pendek/ujian-tengah-semester">Ujian Tengah Semester</a></li>
       </ul>
     </div>
 
     <li><a data-toggle="collapse" href="#semester-reguler">Semester Reguler</a></li>
     <div id="semester-reguler" class="panel-collapse collapse out">
       <ul>
-        <li><a>Absensi</a></li>
-        <li><a>Pendaftaran Semester Pendek</a></li>
-        <li><a>Proses KRS</a></li>
-        <li><a>Ujian Tengah dan Akhir Semester</a></li>
+        <li><a routerLink="semester-reguler/absensi">Absensi</a></li>
+        <li><a routerLink="semester-reguler/pendaftaran-semester-pendek">Pendaftaran Semester Pendek</a></li>
+        <li><a routerLink="semester-reguler/proses-krs">Proses KRS</a></li>
+        <li><a routerLink="semester-reguler/ujian-tengah-dan-akhir-semester">Ujian Tengah dan Akhir Semester</a></li>
       </ul>
     </div>
 
     <li><a data-toggle="collapse" href="#siadin">SiAdin</a></li>
     <div id="siadin" class="panel-collapse collapse out">
       <ul>
-        <li><a>E-mail</a></li>
-        <li><a>Jenis & Kategori</a></li>
-        <li><a>Layanan</a></li>
-        <li><a>Login</a></li>
+        <li><a routerLink="semester-reguler/e-mail">E-mail</a></li>
+        <li><a routerLink="semester-reguler/jenis-dan-kategori">Jenis & Kategori</a></li>
+        <li><a routerLink="semester-reguler/layanan">Layanan</a></li>
+        <li><a routerLink="semester-reguler/login">Login</a></li>
       </ul>
     </div>
 
     <li><a data-toggle="collapse" href="#wisuda">Wisuda</a></li>
     <div id="wisuda" class="panel-collapse collapse out">
       <ul>
-        <li><a>Hal-hal penting</a></li>
-        <li><a>Mekanisme Wisuda</a></li>
-        <li><a>Syarat Pendaftaran Wisuda</a></li>
-        <li><a>Tanggal Pelaksanaan</a></li>
+        <li><a routerLink="wisuda/hal-hal-penting">Hal-hal penting</a></li>
+        <li><a routerLink="wisuda/mekanisme-wisuda">Mekanisme Wisuda</a></li>
+        <li><a routerLink="wisuda/syarat-pendaftaran-wisuda">Syarat Pendaftaran Wisuda</a></li>
+        <li><a routerLink="wisuda/tanggal-pelaksanaan">Tanggal Pelaksanaan</a></li>
       </ul>
     </div>
   </ul>
