--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -12,7 +12,7 @@
 
   <!-- Konten disamping -->
   <div class="col-md-4 center">
-    <h3>Frequently Asked Question</h3>
+    <h3 class="white">Frequently Asked Question</h3>
   </div>
 </div>
 
@@ -93,6 +93,9 @@
                         <li><a href="http://dinus.ac.id/hospitality">Hospitality</a></li>
                         <li><a href="http://www.dinus.ac.id/faq/" target="_blank">FAQ </a></li>
                     </ul>
+                </li>
+                <li class="menu dropdown">
+                    <a href="localhost:4200" class="dropdown-toggle" data-toggle="dropdown" style="border-right: 1px solid #245580;">FAQ</a>
                 </li>
                 <li id="lain" class="menu dropdown hide">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" style="border-right: 1px solid #245580;">OTHERS</a>
@@ -177,7 +180,7 @@
                         else{$("#nama").removeClass("hide");$("#nama").val("");}
                     }
                 </script>
-                <button type="submit" name="search" class="btn btn-default btn-sm btn-en"><i class="fa fa-search"></i></button>
+                <button type="submit" name="search" class="btn btn-default btn-sm btn-en"><i class="fa fa-search">Search</i></button>
                 <a href="http://id.dinus.ac.id/" title="Indonesia (ID)" target="_blank"><img src="http://dinus.ac.id/img/icon/indo flag.ico" width="25px" style="margin-left:10px;"></a>
             </form>
 
