--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -60,7 +60,7 @@
 <!-- PENUTUP FOOTER -->
 <div style="border-bottom: 3px solid #FF4500;">
     <div class="container" style="color: #333;">
-        <h6>UNIVERSITAS DIAN NUSWANTORO SEMARANG ||
+        <h6>Frequently Asked Question <a href="dinus.ac.id">Universitas Dian Nuswantoro</a> ||
             Copyright © 2015 - 2020 PSI UDINUS All right Reserved (App-33)
         </h6>
     </div>
