--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -27,76 +27,12 @@
       <div class="fontmenu">
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav modif3">
-              <li class="menu" id="ilanghome"><a href="http://dinus.ac.id/" style="border-right: 1px solid #245580;"><strong><i class="fa fa-home"></i></strong></a></li>
-              <li class="menu dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" style="border-right: 1px solid #245580;">ADMISSION <!-- <span class="caret"></span>--></a>
-                  <ul class="dropdown-menu menu-utama">
-
-                      <li class="dropdown-submenu">
-                          <a tabindex="0" data-toggle="dropdown" style="cursor:pointer;">Undergraduate</a>
-                          <ul class="dropdown-menu">
-                              <li><a href="http://dinus.ac.id/why">Why UDINUS</a></li>
-                              <li><a href="http://dinus.ac.id/aply">Register to Dinus</a></li>
-                              <li><a href="http://dinus.ac.id/fees">Fees & Funding</a></li>
-                              <li><a href="http://dinus.ac.id/scholarship">Scholarship</a></li>
-                              <li><a href="http://dinus.ac.id/international">International Students</a></li>
-                              <li><a href="http://ilcs.dinus.ac.id/" target="_blank">ILCS</a></li>
-                              <li><a href="http://cflt.dinus.ac.id/" target="_blank">CLFT</a></li>
-                          </ul>
-                      </li>
-                      <li><a href="http://pps.dinus.ac.id/new/index.php" target="_blank">Graduate</a></li>
-                      <li><a href="http://dinus.ac.id/prospective/how-to-access" target="_blank">How To Access</a></li>
-                  </ul>
-              </li>
-
-              <li class="menu"><a href="http://dinus.ac.id/news" style="border-right: 1px solid #245580;">NEWS & EVENTS</a></li>
-
-                <li class="menu dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" style="border-right: 1px solid #245580;">PROGRAMS</a>
-                    <ul class="dropdown-menu menu-utama">
-
-                        <li class="dropdown-submenu">
-                            <a tabindex="0" data-toggle="dropdown" style="cursor:pointer;">Faculty</a>
-                            <ul class="dropdown-menu">
-                                <li><a href="http://dinus.ac.id/faculty/39/computer-science">Faculty of Computer Science</a></li>
-                                <li><a href="http://dinus.ac.id/faculty/40/economics-business">Faculty of Economics and Business</a></li>
-                                <li><a href="http://dinus.ac.id/faculty/42/humanities">Faculty of Humanities</a></li>
-                                <li><a href="http://dinus.ac.id/faculty/44/health-science">Faculty of Health Science</a></li>
-                                <li><a href="http://dinus.ac.id/faculty/45/enginering">Faculty of Enginering</a></li>
-                                <li><a href="http://pps.dinus.ac.id">Graduate</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="http://dinus.ac.id/program">Featured Programs</a></li>
-                        <li><a href="http://dinus.ac.id/collaboration">Collaboration</a></li>
-                        <li><a href="http://lppm.dinus.ac.id">Research</a></li>
-                        <!--                                      <li><a href="--><!--">International Undergraduate</a></li>-->
-                    </ul>
-                </li>
+              <li class="menu"><a href="http://dinus.ac.id/" style="border-right: 1px solid #245580;"><strong><i class="fa fa-home fa-lg"></i></strong></a></li>
 
                 <!--                        <li class="menu"><a href="--><!--">Collaboration</a></li>-->
                 <!--                        <li class="menu"><a href="--><!--">Research</a></li>-->
 
                 <!--                        <li class="menu"><a href="--><!--">Dinus Life</a></li>-->
-
-                <li class="menu dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" style="border-right: 1px solid #245580;">ABOUT</a>
-                    <ul class="dropdown-menu menu-utama">
-                        <li><a href="http://dinus.ac.id/greetings">Greetings From Rector</a></li>
-                        <li><a href="http://dinus.ac.id/vision">Vision & Mission</a></li>
-                        <li><a href="http://dinus.ac.id/organization">Organization</a></li>
-                        <li><a href="http://dinus.ac.id/accreditation">Accreditation</a></li>
-                        <!-- <li><a href="">Jobs & Carreer</a></li> -->
-                        <li><a href="http://dinus.ac.id/location">Location</a></li>
-                        <li><a href="http://dinus.ac.id/facility">Facilities</a></li>
-                        <li><a href="http://dinus.ac.id/life">Dinus Life</a></li>
-                        <li><a href="http://dinus.ac.id/about/52/history-dinus">History Of Dinus</a></li>
-                        <li><a href="http://dinus.ac.id/hospitality">Hospitality</a></li>
-                        <li><a href="http://www.dinus.ac.id/faq/" target="_blank">FAQ </a></li>
-                    </ul>
-                </li>
-                <li class="menu dropdown">
-                    <a href="localhost:4200" class="dropdown-toggle" data-toggle="dropdown" style="border-right: 1px solid #245580;">FAQ</a>
-                </li>
                 <li id="lain" class="menu dropdown hide">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" style="border-right: 1px solid #245580;">OTHERS</a>
                     <ul class="dropdown-menu menu-utama">
@@ -180,7 +116,7 @@
                         else{$("#nama").removeClass("hide");$("#nama").val("");}
                     }
                 </script>
-                <button type="submit" name="search" class="btn btn-default btn-sm btn-en"><i class="fa fa-search">Search</i></button>
+                <button type="submit" name="search" class="btn btn-default btn-sm btn-en"><i class="fa fa-search"></i></button>
                 <a href="http://id.dinus.ac.id/" title="Indonesia (ID)" target="_blank"><img src="http://dinus.ac.id/img/icon/indo flag.ico" width="25px" style="margin-left:10px;"></a>
             </form>
 
