--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,17 +1,17 @@
 <!-- Header -->
 <div class="container-fluid header navj">
-  <div class="col-md-2">
+  <!-- <div class="col-md-2">
 
-  </div>
+  </div> -->
   <!-- Logo Udinus -->
-  <div class="col-md-6 center">
+  <div class="col-md-8 center">
     <div id="logo">
       <a class="" href="http://dinus.ac.id/" ><img src="http://dinus.ac.id/img/logo dinus university.png" style="max-width:400px;padding: 0px;"></a>
     </div>
   </div>
 
   <!-- Konten disamping -->
-  <div class="col-md-4 center">
+  <div class="col-md-4 right">
     <h3 class="white">Frequently Asked Question</h3>
   </div>
 </div>
