--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div style="background-color: #2F2F2F; color:#fff;padding-top:15px;padding-bottom:15px;">
+<div style="background-color: #033061; color:#fff;padding-top:15px;padding-bottom:15px;">
     <div class="container-fluid">
 
         <div class="col-md-12">
@@ -30,10 +30,6 @@
                     <!--                      <li><a href="#" class="icoLinkedin" title="Linkedin"><i class="fa fa-linkedin sc"></i></a></li>-->
 
                 </ul>
-            <div>
-                <a href="http://m.dinus.ac.id"  title="Ganti ke versi desktop/mobile">Switch to mobile version</a>
-
-            </div>
             </div>
             <div class="col-md-1" style="text-align: center;padding-top: 45px;">
                 <!-- Histats.com  START  (standard)-->
