--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -75,7 +75,7 @@
     <li><a data-toggle="collapse" href="#laboratorium">Laboratorium</a></li>
     <div id="laboratorium" class="panel-collapse collapse out">
       <ul>
-        <li><a routerLink="/laboratorium/jenis-dan-kategori">Jenis dan Kategori</a></li>
+        <li><a routerLink="/laboratorium/jenis-dan-kegiatan">Jenis dan Kategori</a></li>
         <li><a routerLink="/laboratorium/letak-laboratorium">Letak Laboratorium</a></li>
       </ul>
     </div>
@@ -158,10 +158,10 @@
     <li><a data-toggle="collapse" href="#siadin">SiAdin</a></li>
     <div id="siadin" class="panel-collapse collapse out">
       <ul>
-        <li><a routerLink="semester-reguler/e-mail">E-mail</a></li>
-        <li><a routerLink="semester-reguler/jenis-dan-kategori">Jenis & Kategori</a></li>
-        <li><a routerLink="semester-reguler/layanan">Layanan</a></li>
-        <li><a routerLink="semester-reguler/login">Login</a></li>
+        <li><a routerLink="si-adin/e-mail">E-mail</a></li>
+        <li><a routerLink="si-adin/jenis-dan-kategori">Jenis & Kategori</a></li>
+        <li><a routerLink="si-adin/layanan">Layanan</a></li>
+        <li><a routerLink="si-adin/login">Login</a></li>
       </ul>
     </div>
 
