--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,7 +1,6 @@
 <div class="col-sm-3 col-md-2 sidebar">
   <ul class="nav nav-sidebar">
-    <li class="active"><a href="#">Home <span class="sr-only">(current)</span></a></li>
-
+    <li class="active"><a routerLink="/home">Home <span class="sr-only">(current)</span></a></li>
     <li><a data-toggle="collapse" href="#akademik">Akademik</a></li>
     <div id="akademik" class="panel-collapse collapse out">
       <ul>
@@ -174,5 +173,6 @@
         <li><a routerLink="wisuda/tanggal-pelaksanaan">Tanggal Pelaksanaan</a></li>
       </ul>
     </div>
+    <li class="active"><a routerLink="/ask-a-question">Ask A Question ? <span class="sr-only">(current)</span></a></li>
   </ul>
 </div>
