--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -20,7 +20,7 @@ ul.social-network li {
 
 /* footer social icons */
 .social-network a.icoInstagram:hover {
-  background-color: #125688;
+  background-color: #aa034e;
 }
 .social-network a.icoFacebook:hover {
 	background-color:#3B5998;
