--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,8 +1,8 @@
-<div class="col-sm-3 col-md-2 sidebar">
+<div class="col-sm-3 col-md-2 blablabla">
   <ul class="nav nav-sidebar">
-    <li class="active"><a routerLink="/home">Home <span class="sr-only">(current)</span></a></li>
+    <li class=""><a routerLink="/home">Home <span class="sr-only">(current)</span></a></li>
     <li><a data-toggle="collapse" href="#akademik">Akademik</a></li>
-    <div id="akademik" class="panel-collapse collapse out">
+    <div id="akademik" class="panel-collapse collapse out ">
       <ul>
         <li><a routerLink="/akademik/aktifasi">Aktifasi</a></li>
         <li><a routerLink="/akademik/heregristrasi">Heregritasi</a></li>
@@ -173,6 +173,6 @@
         <li><a routerLink="wisuda/tanggal-pelaksanaan">Tanggal Pelaksanaan</a></li>
       </ul>
     </div>
-    <li class="active"><a routerLink="/ask-a-question">Ask A Question ? <span class="sr-only">(current)</span></a></li>
+    <li class="active"><a routerLink="/ask-a-question">Ask A Question ! <span class="sr-only">(current)</span></a></li>
   </ul>
 </div>
