--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 <div class="container-fluid">
   <div class="row">
     <app-sidebar></app-sidebar>
-    <div class="col-sm-5 col-md-10 main">
+    <div class="col-sm-5 col-md-10 main jumbotron">
       <router-outlet></router-outlet>
     </div>
   </div>
