--- a/src/app/ask-a-question/ask-a-question.component.html
+++ b/src/app/ask-a-question/ask-a-question.component.html
@@ -1,3 +1,60 @@
-<p>
-  ask-a-question-? works!
-</p>
+<div>
+  <h2>Input Pertanyaan</h2><hr>
+
+  <p>
+    Apabila pertanyaan ada tidak terdapat pada FAQ yang tersedia silahkan input pertanyaan yang ingin ditanyakan berserta data diri seperti di bawah ini.
+  </p><hr>
+
+
+  <form class="form-horizontal">
+    <div class="form-group">
+      <label class="col-sm-2 control-label">NIM</label>
+      <div class="col-sm-10">
+        <input type="text" class="form-control" placeholder="NIM">
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label class="col-sm-2 control-label">Email</label>
+      <div class="col-sm-10">
+        <input type="email" class="form-control" placeholder="Email">
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label class="col-sm-2 control-label">Kategori</label>
+      <div class="col-sm-10">
+        <select class="form-control">
+          <option><option>
+          <option>Akademik</option>
+          <option>Alumni</option>
+          <option>Career Center</option>
+          <option>Hospitality</option>
+          <option>Kemahasiswaan</option>
+          <option>Kepegawaian</option>
+          <option>Keuangan</option>
+          <option>Laboratorium</option>
+          <option>Layanan Poliklinik</option>
+          <option>Parkir</option>
+          <option>Penelitian & Pengabdian</option>
+          <option>Pengumuman Akademik</option>
+          <option>Percetakan</option>
+          <option>Perpustakaan</option>
+          <option>Semester Pendek</option>
+          <option>Semester Reguler</option>
+          <option>SiAdin</option>
+          <option>Wisuda</option>
+        </select>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label class="col-sm-2 control-label">Pertanyaan : (Jumlah karakter yang akan dibaca oleh sistem maksimal 70)</label>
+      <div class="col-sm-10">
+        <textarea class="form-control" rows="3"></textarea><hr>
+      </div>
+    </div>
+  </form>
+
+  <button type="submit" class="btn btn-primary">Simpan</button>
+</div>
