--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,12 @@
 <app-navbar></app-navbar>
 <div class="container-fluid">
-  <div class="row">
+  <div class="row mid">
+    <div class="col-md-1"></div>
     <app-sidebar></app-sidebar>
-    <div class="col-sm-5 col-md-10 main jumbotron">
+    <div class="col-sm-5 col-md-8 main jumbotron">
       <router-outlet></router-outlet>
     </div>
+    <div class="col-md-1"></div>
   </div>
   <div class="row">
     <app-footer></app-footer>
