--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,6 +1,6 @@
 <div class="col-sm-2 col-md-2 blablabla">
   <ul class="nav nav-sidebar">
-    <li class=""><a routerLink="/home">Home <span class="sr-only">(current)</span></a></li>
+    <li class=""><a routerLink="/">Home <span class="sr-only">(current)</span></a></li>
     <li><a data-toggle="collapse" href="#akademik">Akademik</a></li>
     <div id="akademik" class="panel-collapse collapse out ">
       <ul>
