--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
-<div class="col-sm-2 col-md-2 blablabla">
+<div class="col-xs-2 col-sm-2 col-md-2 blablabla">
   <ul class="nav nav-sidebar">
     <li class=""><a routerLink="/">Home <span class="sr-only">(current)</span></a></li>
     <li><a data-toggle="collapse" href="#akademik">Akademik</a></li>
