--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <app-navbar></app-navbar>
 <div class="container-fluid">
   <div class="row mid">
-    <div class="col-md-1"></div>
+    <div class="col-sm-1 col-md-1"></div>
     <app-sidebar></app-sidebar>
-    <div class="col-sm-5 col-md-8 main jumbotron">
+    <div class="col-xs-8 col-sm-8 col-md-8 main jumbotron">
       <router-outlet></router-outlet>
     </div>
     <div class="col-md-1"></div>
