--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -93,7 +93,7 @@
                                 <li><a href="http://www.dinus.ac.id/faq/" target="_blank">FAQ </a></li>
                             </ul>
                         </li>
-                        <li class="menu"><a routerLink="/home" style="border-right: 1px solid #245580;">FAQ</a></li>  
+                        <li class="menu"><a routerLink="/" style="border-right: 1px solid #245580;">FAQ</a></li>
 
 
 
